# cegcc

./: svn-commit.tmp
cegcc/: NEWS  README  svn-config.txt
cegcc/docs/: Makefile  build-toolchain.html  choosing.html  debugging.html  details.html  dll.html  exception.html  faq.html  index.html  install-linux.html  layer.html  license.html  profile.html  reporting.html  structure.html  test.html  test5.c  test5.h  test5.rc  using.html  what.html
cegcc/docs/examples/: Makefile  fibo.c  hello-dialog.c  menu-resource.c  menu-resource.rc
cegcc/docs/microsoft/: README  wincenet_cepcc_app.htm
cegcc/scripts/: blogger.php  cegcc-update-website  cegcc-update-website-startup  class.atomapi.php  make_release.sh  update_news.sh
cegcc/scripts/linux/: build-binutils-mingw.sh  build-binutils.sh  build-dll.sh  build-gcc-mingw.sh  build-gcc.sh  build-gdb.sh  build-gpp.sh  build-libs.sh  build-libs2.sh  build-mingw.sh  build-newlib.sh  build-stub.sh  build.sh  cegcc.spec  cegcc.spec.in  gdb-mingw32ce-arm.spec.in  gdb-mingw32ce-i386.spec.in  install-binutils-mingw.sh  install-binutils.sh  install-dll.sh  install-docs.sh  install-gcc-mingw.sh  install-gcc.sh  install-gdb.sh  install-gpp.sh  install-includes.sh  install-libs.sh  install-libs2.sh  install-mingw-crt.sh  install-mingw.sh  install-newlib.sh  install-stub.sh  list-libs.sh  mingw32ce-i386.spec.in  mingw32ce.spec  mingw32ce.spec.in  rpm-build.sh  rpm-create-source.sh  rpm-create-source.sh.in  rpm-install.sh  (+1 more)
cegcc/src/: ChangeLog  VERSIONS  build-all.sh  build-binutils.sh  build-binutils_mingw32ce.sh  build-cegcc.sh  build-gcc.sh  build-gcc_mingw32ce.sh  build-gcc_wince_mingw.sh  build-gdb.sh  build-mingw-runtime.sh  build-mingw32ce-dlls.sh  build-mingw32ce.sh  build-stub.sh  script.sh
cegcc/src/binutils/: ChangeLog.ce  config.sub  configure  configure.ac  configure.in
cegcc/src/binutils-2.18/: ChangeLog.ce  config.sub  configure  configure.ac
cegcc/src/cegcc/: ChangeLog  Makefile
cegcc/src/gcc/: ChangeLog.ce  (+6 more)
cegcc/src/gcc-4.3.0/: ChangeLog.ce  config.sub  configure  configure.ac
cegcc/src/gcc-4.3.2/: LAST_UPDATED
cegcc/src/gcc-4.4.0/: ChangeLog.ce  configure  configure.ac
cegcc/src/newlib/newlib/libc/sys/wince/: Makefile.am  Makefile.in  __eh_continue.S  _crt_mt.c  abort.c  alloc.c  ascii2addr.c  asmdefs.h  assert.c  cecopyfile.c  cecreatefile.c  cecreatefilemap.c  cecurrentdir.c  cefileattr.c  cefindfile.c  cefixpath.c  ceirda.c  cemakeunixpath.c  cemisc.c  cemovefile.c  ceprocess.c  ceprofile.c  ceregistry.c  ceremovedir.c  ceshared2.c  cethread.c  ceutil.c  ceversion.h  configure  configure.in  crt0.S  crtmt.c  crtst.c  cs.c  dirent.c  dllcrt1.S  dllmain.c  dllmaincrtstartup.c  dllmaincrtstartup_t.c  env.c  (+64 more)
cegcc/src/newlib/newlib/libc/sys/wince/arpa/: ftp.h
cegcc/src/newlib/newlib/libc/sys/wince/asm/: socket.h  sockios.h
cegcc/src/newlib/newlib/libc/sys/wince/bits/: endian.h  netdb.h  socket.h  types.h  uio.h
cegcc/src/newlib/newlib/libc/sys/wince/include/: basetsd.h  features.h  fixincl.h  fnmatch.h  getopt.h  glob.h  kfuncs.h  netdb.h  shlguid.h  sipapi.h  windef.h  windows.h  winnt.h
cegcc/src/newlib/newlib/libc/sys/wince/netinet/: in.h  tcp.h
cegcc/src/newlib/newlib/libc/sys/wince/sys/: _types.h  ceirda.h  ceprofile.h  ceshared.h  ceutil.h  cs.h  devops.h  dirent.h  fifo.h  findpath.h  fixpath.h  io.h  ioctl.h  keycode.h  llst.h  mqueue.h  sclass.h  shared.h  socket.h  socket_defs.h  spawn.h  sysconf.h  syslog.h  template  termbits.h  termios.h  timefcns.h  unistd.h  utime.h  utmp.h  wcebase.h  wceerror.h  wcefile.h  wceipfcns.h  wcekernel.h  wcemachine.h  wcememory.h  wcenetwork.h  wceprocess.h  wcesocktypes.h  (+4 more)
cegcc/src/newlib/newlib/libc/sys/wince/sys/oldsys/: wcecomm.h  wceerror.h  wceioctl.h  wcemachine.h  wcenetwork.h  wceregistry.h  wcethread.h  wcetypes.h
cegcc/src/newlib/newlib/libc/sys/wince/unix/: Makefile.am  Makefile.in
cegcc/src/profile/: ChangeLog.mingw32ce  Makefile.in  config.sub  configure  configure.in
cegcc/src/profile/profile/: Makefile.in  configure  configure.in  gmon.c  profil.c
cegcc/website/: about.html  cegcc.css  documentation.html  download.html  index.html  menu.css  news.html  prerelease.html  software-that-works.html  top.html  versions.html
(+912 files in other folders)
